--- a/css/app.css
+++ b/css/app.css
@@ -97,3 +97,6 @@ body {
 	background-color: #1CA347;
 	border-color: #1CA347;
 }
+.error{color: red;}
+.form-control.error{color: black;}
+.form-control.valid{color: #1CA347;}
